# bot_tg

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  test.py
bot/: loader.py  main.py
bot/handlers/: command_handler.py  gen_handler.py  reg_handlers.py  start.py
bot/menu/: generation_menu.py
bot/states/: states.py
bot/utils/: generator.py
